# mcp-tutorial

./: .env.example  .gitignore  README.md  chat_log.json  langchain_server_config.json  pyproject.toml  server_config.json
agents/: chatbot.py  langchain_agent.py
assets/ppt/: MCP tutorial 1 - How AI Uses Tools From Toolformer to MCP.pptx  MCP tutorial 2 - MCP Fundamentals.pptx  MCP tutorial 3 - MCP basics in python.pptx  MCP tutorial 4 - Connecting to Existing MCP Servers.pptx  MCP tutorial 5 - MCP + LLM Integration.pptx  MCP tutorial 6 - Future outlook & Clsoing.pptx
clients/: filesystem_client.py  git_client.py  stdio_client.py  streamable_client.py  tavily_client.py
servers/stdio_servers/: calculator.py
servers/streamable_http_severs/: greet.py
